<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_12sdp"
        tools:context=".ui.DemoFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_picker_button"
            style="@style/ButtonSelectorStyle"
            android:layout_marginTop="@dimen/_6sdp"
            android:onClick="@{clickHandler::onClick}"
            android:text="@string/open_image_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_sheet_button"
            style="@style/ButtonSelectorStyle"
            android:onClick="@{clickHandler::onClick}"
            android:text="@string/open_picker_sheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_picker_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/options_button"
            style="@style/ButtonSelectorStyle"
            android:onClick="@{clickHandler::onClick}"
            android:text="@string/customize_picker_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_sheet_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options_button"
            app:spanCount="2"
            tools:itemCount="8"
            tools:listitem="@layout/list_item_image_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>